# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Dec 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-25.0.9999-r1.ebuild:
  Install CONTRIBUTE file.

*emacs-vcs-25.0.9999-r1 (13 Nov 2014)

  13 Nov 2014; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-25.0.9999.ebuild,
  +emacs-vcs-25.0.9999-r1.ebuild:
  Merge changes from Portage tree.

  10 Nov 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-25.0.9999.ebuild:
  Merge changes from Portage tree.

  18 May 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.9999.ebuild:
  Merge changes from Portage tree.

  05 May 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.9999.ebuild:
  Merge changes from Portage tree.

  08 Apr 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.9999.ebuild:
  Merge changes from Portage tree.

  04 Apr 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.9999.ebuild:
  Merge changes from Portage tree.

*emacs-vcs-24.4.9999 (26 Mar 2014)

  26 Mar 2014; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.3.9999.ebuild,
  +emacs-vcs-24.4.9999.ebuild:
  Version bump to reflect upstream change of version number.

  13 Mar 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Install emacs man page under the same name as the binary.

  19 Feb 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild,
  metadata.xml:
  Follow QA policy on gtk and gtk3 USE flags.

  19 Feb 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  19 Jan 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Switch from package.mask to empty KEYWORDS.

  19 Jan 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  29 Dec 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.

  31 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.3.9999.ebuild:
  Merge changes from Portage tree.
