@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs-vcs
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*emacs-vcs-25.0.9999-r2 (21 Jan 2015)
+
+  21 Jan 2015; Ulrich Müller <ulm@gentoo.org> +emacs-vcs-25.0.9999-r2.ebuild:
+  Test new setgid games setup.
 
   29 Dec 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-25.0.9999-r1.ebuild:
   Install CONTRIBUTE file.
